--- a/src/App.css
+++ b/src/App.css
@@ -2,29 +2,10 @@
   margin: 0 auto;
   display: grid;
   grid-template-rows: 60px 1fr;
-  grid-template-rows: 2fr 10fr;
+  grid-template-columns: 2fr 10fr;
   grid-gap: 10px;
   grid-template-areas:
     "h h"
     "n c";
   width: 1200px;
-}
-
-.header {
-  grid-area: h;
-  background-color: green;
-}
-
-.header img {
-  width: 20px;
-}
-
-.nav {
-  grid-area: n;
-  background-color: hotpink;
-}
-
-.content {
-  grid-area: c;
-  background-color: bisque;
 }
