--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,14 @@
   display: grid;
   grid-template-rows: 60px 1fr;
   grid-template-columns: 2fr 10fr;
-  grid-gap: 10px;
+  grid-gap: 5px;
   grid-template-areas:
     "h h"
     "n c";
   width: 1200px;
+}
+
+.app-wrapper-content {
+  grid-area: c;
+  background-color: cornflowerblue;
 }
