--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,9 +1,14 @@
 .nav {
   grid-area: n;
   background-color: hotpink;
+  padding: 20px;
 }
 
 .item a {
   text-decoration: none;
   color: white;
+}
+
+.item a.activeLink {
+  color: goldenrod;
 }
